// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: PostComponent renders 1`] = `
<View
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FEB027",
        "height": 630,
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "width": 750,
      }
    }
  >
    <Text
      style={
        [
          [
            {
              "color": "#25282D",
            },
            {
              "fontFamily": "Poppins-SemiBold",
              "fontSize": 32,
              "fontStyle": "normal",
              "fontWeight": "600",
              "letterSpacing": 0.0015,
              "textAlign": "left",
            },
          ],
          {
            "color": "#FFFFFF",
            "fontSize": 32,
          },
        ]
      }
    >
      I'm a ninja turtle that is a teenager.
    </Text>
  </View>
</View>
`;

exports[`component: PostComponent renders image posts 1`] = `
<View
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`component: PostComponent renders textImage posts 1`] = `
<View
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View>
    <Text
      style={
        [
          [
            {
              "color": "#25282D",
            },
            {
              "fontFamily": "Poppins-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "textAlign": "left",
            },
          ],
          {
            "margin": 16,
          },
        ]
      }
    >
      Hello world
    </Text>
  </View>
</View>
`;
